--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -10,24 +10,17 @@ spring.profiles.active=dev
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=111qqq!
+
+#mybatis日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
 #配置mapper xml文件的路径
-mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
+mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*xml
 
-# nacos服务地址
+#nacos 服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-
-#开启熔断机制
-feign.hystrix.enabled=true
-# 设置hystrix超时时间，默认1000ms
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
-
-# 设置日志级别
-#logging.level.root=INFO
-#mybatis日志
-#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
