--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -1,20 +1,16 @@
-# 服务端口
 server.port=8003
-# 服务名
+#服务名
 spring.application.name=service-vod
 
-# 环境设置：dev、test、prod
+#环境设置：dev test prod
 spring.profiles.active=dev
 
-# nacos服务地址
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-
-#阿里云 vod
+#阿里云oss
 #不同的服务器，地址不同
-aliyun.vod.file.keyid=LTAI4FvvVEWiTJ3GNJJqJnk7
-aliyun.vod.file.keysecret=9st82dv7EvFk9mTjYO1XXbM632fRbG
+aliyun.oss.file.enpoint=oss-cn-beijing.aliyuncs.com
+aliyun.oss.file.keyid=LTAI4GGPDmFTixGULUiLWMrk
+aliyun.oss.file.keysecret=M4J92fbgqXV4wCMsFPjIoYJwBPtlg4
 
-# 最大上传单个文件大小：默认1M
 spring.servlet.multipart.max-file-size=1024MB
-# 最大置总上传的数据大小 ：默认10M
 spring.servlet.multipart.max-request-size=1024MB
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
