--- a/service/service_cms/src/main/resources/application.properties
+++ b/service/service_cms/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # 服务端口
-server.port=8001
+server.port=8004
+
 # 服务名
-spring.application.name=service-edu
+spring.application.name=service-cms
 
 # 环境设置：dev、test、prod
 spring.profiles.active=dev
@@ -20,7 +21,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
 #配置mapper xml文件的路径
-mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*xml
+mybatis-plus.mapper-locations=classpath:com/atguigu/educms/mapper/xml/*xml
 
 #nacos 服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
