--- a/service/service_cms/src/main/resources/application.properties
+++ b/service/service_cms/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=service-cms
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=111qqq!
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
@@ -29,3 +29,11 @@ spring.redis.lettuce.pool.max-wait=-1
 #最大阻塞等待时间(负数表示没限制)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
+#nacos 服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+#开启熔断机制
+feign.hystrix.enabled=false
+
+#设置hystrix超时时间，默认1000ms
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
