--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -36,3 +36,5 @@ WX_OPEN_APPID=wxed9954c01bb89b47
 WX_OPEN_APPSECRET=a7482517235173ddb4083788de60b90e
 WX_OPEN_REDIRECTURL=http://guli.shop/api/ucenter/wx/callback
 WX_OPEN_QRURL=https://open.weixin.qq.com/connect/qrconnect
+WX_OPEN_ACCESSTOKEN_URL=https://api.weixin.qq.com/sns/oauth2/access_token
+WX_OPEN_GET_USERINFO_URL=https://api.weixin.qq.com/sns/userinfo
