--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -30,7 +30,7 @@ mybatis-plus.mapper-locations=classpath:com/atguigu/cmsservice/mapper/xml/*.xml
 #mybatis日志
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #微信公众号相关配置
 WX_OPEN_APPID=wxed9954c01bb89b47
 WX_OPEN_APPSECRET=a7482517235173ddb4083788de60b90e
