--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
     <modules>
         <module>service</module>
         <module>common</module>
+        <module>canal_client</module>
+        <module>Infrastructure</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
