--- a/service/service_statistics/src/main/resources/application.properties
+++ b/service/service_statistics/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=service-statistics
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=111qq!
+spring.datasource.password=111qqq!
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
