--- a/service/service_acl/src/main/resources/application.properties
+++ b/service/service_acl/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 服务端口
-server.port=8004
+server.port=8009
 # 服务名
-spring.application.name=service-cms
+spring.application.name=service-acl
 
 # mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,12 +13,6 @@ spring.datasource.password=111qqq!
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-#配置mapper xml文件的路径
-mybatis-plus.mapper-locations=classpath:com/atguigu/cmsservice/mapper/xml/*.xml
-
-#mybatis日志
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.database= 0
@@ -29,11 +23,13 @@ spring.redis.lettuce.pool.max-wait=-1
 #最大阻塞等待时间(负数表示没限制)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
-#nacos 服务地址
+#最小空闲
+
+#配置mapper xml文件的路径
+mybatis-plus.mapper-locations=classpath:com/atguigu/aclservice/mapper/xml/*.xml
+
+# nacos服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
-#开启熔断机制
-feign.hystrix.enabled=false
-
-#设置hystrix超时时间，默认1000ms
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+#mybatis日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
