--- a/service/service_statistics/pom.xml
+++ b/service/service_statistics/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>service_statistics</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+    </dependencies>
 </project>
