--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-server.port=8003
-#服务名
-spring.application.name=service-vod
-
-#环境设置：dev test prod
-spring.profiles.active=dev
-
-#阿里云oss
-#不同的服务器，地址不同
-aliyun.oss.file.enpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyid=LTAI4GGPDmFTixGULUiLWMrk
-aliyun.oss.file.keysecret=M4J92fbgqXV4wCMsFPjIoYJwBPtlg4
-
-spring.servlet.multipart.max-file-size=1024MB
-spring.servlet.multipart.max-request-size=1024MB
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#server.port=8003
+##服务名
+#spring.application.name=service-vod
+#
+##环境设置：dev test prod
+#spring.profiles.active=dev
+#
+##阿里云oss
+##不同的服务器，地址不同
+#aliyun.oss.file.enpoint=oss-cn-beijing.aliyuncs.com
+#aliyun.oss.file.keyid=LTAI4GGPDmFTixGULUiLWMrk
+#aliyun.oss.file.keysecret=M4J92fbgqXV4wCMsFPjIoYJwBPtlg4
+#
+#spring.servlet.multipart.max-file-size=1024MB
+#spring.servlet.multipart.max-request-size=1024MB
+#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
