--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>common</module>
         <module>canal_client</module>
         <module>Infrastructure</module>
+        <module>unit_test</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
