--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-server.port=8002
-#服务名
-spring.application.name=service-oss
-
-#环境设置：dev test prod
-spring.profiles.active=dev
-
-#阿里云oss
-#不同的服务器，地址不同
-aliyun.oss.file.enpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyid=LTAI4GGPDmFTixGULUiLWMrk
-aliyun.oss.file.keysecret=M4J92fbgqXV4wCMsFPjIoYJwBPtlg4
-
-aliyun.oss.file.bucketname=edu-1203
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#server.port=8002
+##服务名
+#spring.application.name=service-oss
+#
+##环境设置：dev test prod
+#spring.profiles.active=dev
+#
+##阿里云oss
+##不同的服务器，地址不同
+#aliyun.oss.file.enpoint=oss-cn-beijing.aliyuncs.com
+#aliyun.oss.file.keyid=LTAI4GGPDmFTixGULUiLWMrk
+#aliyun.oss.file.keysecret=M4J92fbgqXV4wCMsFPjIoYJwBPtlg4
+#
+#aliyun.oss.file.bucketname=edu-1203
+#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
